--- a/.github/workflows/bp_pipeline.yml
+++ b/.github/workflows/bp_pipeline.yml
@@ -1,35 +1,43 @@
-name: .NET Core
-
-on:
-  push:
-    branches: [ main ]
-
+name: x00193212_CI_CD_Pipeline
 env:
-  AZURE_WEBAPP_NAME: happycoding-mm    # set this to your application's name
+  AZURE_WEBAPP_NAME: 'BPCalculatorX3212'            ## set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: '.'  
+  NUGET_VERSION: '6.0.x'
+on: 
+  push:
+    branches:
+      - "main"
 
 jobs:
-  build-and-deploy:
-
-    runs-on: ubuntu-latest
-
+  build:
+    runs-on: windows-latest 
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 6.0.x
-    - name: Install dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-    - name: Test
-      run: dotnet test --no-restore --verbosity normal
-    - name: dotnet publish
-      run: |
-        dotnet publish -c Release -o dotnetcorewebapp 
-    - name: 'Deploy to Azure WebApp'
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: './dotnetcorewebapp'
+      - uses: actions/checkout@v3
+      - name: Setup .net 6.0
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: 6.0.x
+
+      - name: Build Project for release
+        run: dotnet build --configuration release
+
+      - name: Install Nuget
+        uses: nuget/setup-nuget@v1
+        with:
+            nuget-version: ${{ env.NUGET_VERSION}}
+      - name: NuGet to restore dependencies as well as project-specific tools that are specified in the project file
+        run: nuget restore
+  
+      - name: Add msbuild to PATH
+        uses: microsoft/setup-msbuild@v1.0.2
+
+      - name: Run MSBuild
+        run: msbuild .\BPCalculator.sln
+ 
+    # Deploy to Azure Web apps
+      - name: Run Azure webapp deploy action using publish profile credentials
+        uses: azure/webapps-deploy@v2
+        with: 
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}                        # your app name
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }} # Define secret variable in repository settings as per action documentation
+          package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/BPCalculator'
