--- a/.github/workflows/bp_pipeline.yml
+++ b/.github/workflows/bp_pipeline.yml
@@ -1,40 +1,57 @@
-name: x00193212_CI_CD_Pipeline
-env:
-  AZURE_WEBAPP_NAME: 'BPCalculatorX3212'            ## set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: '.'  
-  NUGET_VERSION: '6.0.x'
-on: 
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy ASP.Net Core app to Azure Web App - BPCalculatorX3212
+
+on:
   push:
     branches:
-      - "main"
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
-    runs-on: windows-latest 
+    runs-on: windows-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup .net 6.0
-        uses: actions/setup-dotnet@v2
-        with:
-          dotnet-version: 6.0.x
+      - uses: actions/checkout@v2
 
-      - name: Install Nuget
-        uses: nuget/setup-nuget@v1
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v1
         with:
-            nuget-version: ${{ env.NUGET_VERSION}}
-      - name: NuGet to restore dependencies as well as project-specific tools that are specified in the project file
-        run: nuget restore
-  
-      - name: Add msbuild to PATH
-        uses: microsoft/setup-msbuild@v1.0.2
+          dotnet-version: '6.0.x'
+          include-prerelease: true
 
-      - name: Run MSBuild
-        run: msbuild .\BPCalculator.sln
- 
-    # Deploy to Azure Web apps
-      - name: Run Azure webapp deploy action using publish profile credentials
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
+
+      - name: dotnet publish
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v2
+        with:
+          name: .net-app
+          path: ${{env.DOTNET_ROOT}}/myapp
+
+  deploy:
+    runs-on: windows-latest
+    needs: build
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v2
+        with:
+          name: .net-app
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
-        with: 
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}                        # your app name
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }} # Define secret variable in repository settings as per action documentation
-          package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/BPCalculator'
+        with:
+          app-name: 'BPCalculatorX3212'
+          slot-name: 'production'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: .
